Fix issue with buttons and spacing

--- a/sass/homepageStyles.sass
+++ b/sass/homepageStyles.sass
@@ -28,7 +28,7 @@ html
         font-size: 2.25rem
         font-family: fonts.$accent-font
 #home, #projects, #mySkills
-    min-height: 800px
+    min-height: 500px
     display: flex
     flex-direction: column
     align-items: center
@@ -71,7 +71,7 @@ html
         bottom: 5em
     border-radius: 40px
     padding: 5px
-    width: calc( 12em + #{5px} )
+    // width: calc( 12em + #{5px} )
 
 .circle-container
     position: absolute
@@ -145,11 +145,11 @@ img
 @keyframes animate
     0%
         opacity: 1
-        top: 1em
+        top: 2.5em
 
     100% 
         opacity: 0 
-        top: 3em
+        top: 1em
         transform: scale(0.8)
 
 // STYLES FOR SOCIAL MEDIA SIDEBAR
@@ -194,7 +194,7 @@ $icon-margin: 5px
     #home
         padding: 2em
     .gradient-border
-        width: calc( 12em + #{100px} )
+        // width: calc( 12em + #{100px} )
         margin:
             top: 7em
             bottom: 10em
@@ -211,7 +211,7 @@ $icon-margin: 5px
             width: 100%
             height: 200px
     #home, #projects, #mySkills
-        min-height: 900px
+        min-height: 500px
 
 @media screen and ( min-width: 660px )
     #home
@@ -278,9 +278,9 @@ $icon-margin: 5px
         .home-header
             padding: 2em
             span
-                font-size: 7rem
+                font-size: 5rem
         .home-header-subtext
-            font-size: 4rem
+            font-size: 3rem
 
     .circle-container
         .orange-circle1
